refactor: use enhanced instanceof